[package]
name = "tagfs"
version = "0.1.0"
authors = ["SMartinScottLogic <smartin@scottlogic.com>"]
edition = "2018"

[dependencies]
fuse_mt = "0.6.0"           # A higher-level FUSE filesystem library with multi-threading and inode->path translation.
libc = "0.2.54"             # Raw FFI bindings to platform libraries like libc.
log = "0.4.8"               # A lightweight logging facade for Rust
chrono = "0.4.9"            # Date and time library for Rust
walkdir = "2.3.1"           # Recursively walk a directory.
